# MP_srs2

./: requirements.txt  streamlit_app.py
srs_project/: README.md  pyproject.toml
srs_project/src/srs_project/: crew.py  main.py
srs_project/src/srs_project/config/: agents.yaml  tasks.yaml
