[project]
name = "srs_project"
version = "0.1.0"
description = "srs_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
srs_project = "srs_project.main:run"
run_crew = "srs_project.main:run"
train = "srs_project.main:train"
replay = "srs_project.main:replay"
test = "srs_project.main:test"
run_with_trigger = "srs_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
